# klaus

./: .containerignore  .env.example  .gitignore  CONTRIBUTING.md  Containerfile  Containerfile.postgres  README.md  docker-compose.yml  pyproject.toml
.cursor/rules/: clean-code.mdc  keep-docs-updated.mdc  keep-readme-updated.mdc  update-docs.mdc  use-podman.mdc
.github/workflows/: ci.yml  deploy-docs.yml
config/: klaus.yaml
data/agents/: analyst.md  code-expert.md  creative-writer.md  github-reviewer.md  jira-developer.md
data/skills/: code-review.md  web-research.md
data/tools/: calculator.md  date_time.md  text_transform.md
docs/: ADDING_AGENTS.md  ADDING_TOOLS.md  API_REFERENCE.md  ARCHITECTURE.md  MEMORY_SYSTEM.md  UI_GUIDE.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: adding-backends.md  adding-tools.md  architecture.md  extending-klaus.md  getting-started.md  md-tools.md  memory-system.md  orchestration.md  task-routing.md  ui-guide.md
docs/reference/: api.md  configuration.md  database.md  sse.md  websocket.md
scripts/: init-pgvector.sql  start-postgres.sh
tests/: conftest.py  test_config.py  test_db.py  test_events.py  test_events_orchestration.py  test_gemini_backend.py  test_md_agents.py  test_md_tools.py  test_memory_index.py  test_memory_store.py  test_memory_tree.py  test_orchestrator.py  test_registry.py  test_routing.py  test_splitter.py  test_sqlite_store.py  test_superpowers.py
ui/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+59 files in other folders)
