[project]
name = "klaus"
version = "0.1.0"
description = "Multi-agent AI assistant platform with local model support and dynamic MCP integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    "httpx>=0.28.0",
    "mcp>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-google-genai>=4.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-community>=0.3.0",
    "huggingface-hub>=0.28.0",
    "langgraph>=0.4.0",
    "langfuse>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
klaus = "klaus.main:cli"
klaus-dev = "klaus.main:dev"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
